# yyy

./: .gitignore  Cargo.toml  Justfile  README.md
config/: defaults.toml  dev.toml  test.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/web/: Cargo.toml
crates/web/src/: brands.rs  error.rs  lib.rs  state.rs
seeds/: brands.yml  project_archetypes.yml  projects.yml  vendors.yml
src/: cli.rs  database.rs  main.rs  settings.rs  web.rs
src/cli/: import.rs
src/web/: brands.rs  controllers.rs  error.rs  html.rs  models.rs  state.rs  views.rs
src/web/controllers/: brands.rs  project_archetypes.rs  projects.rs  vendors.rs
src/web/models/: brands.rs  project_archetypes.rs  projects.rs  vendors.rs
src/web/views/: brands.rs  html.rs  project_archetypes.rs  projects.rs  vendors.rs
tests/: cli_tests.rs
