[package]
name = "yyy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["ws", "http2"] }
axum-macros = "0.3.8"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10"
hyper = { version = "0.14.27", features = ["full"] }
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_yaml = "0.9.25"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
thiserror = "1.0.44"
time = { version = "0.3.24", features = ["macros", "serde", "serde-human-readable", "serde-well-known"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["tokio", "trace"] }
tracing = { version = "0.1.37", features = ["log", "log-always"] }
