[package]
name = "yyy-web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.19", features = ["ws", "http2"] }
axum-macros = "0.3.8"
hyper = { version = "0.14.27", features = ["full"] }
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.178", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
thiserror = "1.0.44"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true, features = ["log", "log-always"] }
tower = "0.4.13"
